CKS -Study/CKS-Walk-Thru-003/mock-tasks/task-04-cosign-verifyimages/03-signed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed
  namespace: verify-task
spec:
  containers:
  - name: app
    image: docker.io/YOUR_DOCKERHUB/signed-image:1.0
