CKS -Study/CKS-Walk-Thru-003/mock-tasks/task-04-cosign-verifyimages/04-unsigned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned
  namespace: verify-task
spec:
  containers:
  - name: app
    image: nginx:latest
