CKS -Study/CKS-Walk-Thru-003/mock-tasks/task-04-cosign-verifyimages/02-verify-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: verify-signatures
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - image: "docker.io/YOUR_DOCKERHUB/*"
          keyRef:
            name: cosign-pubkey
            namespace: verify-task
            key: cosign.pub
          mutateDigest: true
